force-app/main/default/objects/Account_Receivable__c/Account_Receivable__c.object-meta.xml
<CustomObject>
    <label>Account Receivable</label>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Account Receivable Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>