force-app/main/default/objects/Account_Receivable__c/fields/Amount_in_Trans_Crcy__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Trans_Crcy__c</fullName>
    <label>Amount (Transaction Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>