force-app/main/default/objects/Account_Receivable__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Receivable</relationshipLabel>
    <relationshipName>Account_Receivable1</relationshipName>
    <type>Lookup</type>
</CustomField>