force-app/main/default/objects/Account_Receivable__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <formula>Customer__r.MDG_Customer_Code__c</formula>
    <label>Customer Code</label>
    <type>Text</type>
</CustomField>