force-app/main/default/objects/Account_Receivable__c/fields/Customer_Sales_Info__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sales_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Sales Info</label>
    <referenceTo>Customer_Sales_Info__c</referenceTo>
    <relationshipLabel>Account Receivable</relationshipLabel>
    <relationshipName>Account_Receivable1</relationshipName>
    <type>Lookup</type>
</CustomField>