force-app/main/default/objects/Account_Receivable__c/fields/Debit_Credit__c.field-meta.xml
<CustomField>
    <fullName>Debit_Credit__c</fullName>
    <label>Debit/Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Debit_Credit</valueSetName>
    </valueSet>
</CustomField>