force-app/main/default/objects/Account_Receivable__c/fields/Document_Currency__c.field-meta.xml
<CustomField>
    <fullName>Document_Currency__c</fullName>
    <label>Document Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>