force-app/main/default/objects/Account_Receivable__c/fields/Due_On__c.field-meta.xml
<CustomField>
    <fullName>Due_On__c</fullName>
    <label>Due On</label>
    <type>Date</type>
</CustomField>