force-app/main/default/objects/Account_Receivable__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Account Receivable</relationshipLabel>
    <relationshipName>Account_Receivable</relationshipName>
    <type>Lookup</type>
</CustomField>