force-app/main/default/objects/Account_Receivable__c/fields/Overdue_Days__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Days__c</fullName>
    <label>(Deprecated) Overdue Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>