force-app/main/default/objects/Account_Receivable__c/fields/Overdue_Days_Formula__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Days_Formula__c</fullName>
    <formula>IF(
    Amount_in_Trans_Crcy__c&lt;=0,
    0,
    (
        DATEVALUE(
            NOW()+CASE(TEXT($User.TimeZoneSidKey),
            &apos;Pacific/Honolulu&apos;,
            18,
            0
        )/24
    )- Due_On__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>