force-app/main/default/objects/Account_Receivable__c/fields/Overdue_Flag__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Flag__c</fullName>
    <formula>IF(Overdue_Days_Formula__c &gt; 0, &quot;Overdue&quot;, &quot;Undue&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Flag</label>
    <type>Text</type>
</CustomField>