force-app/main/default/objects/Account_Receivable__c/fields/Overdue_Period__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Period__c</fullName>
    <formula>IF(Overdue_Days_Formula__c &lt; -180, &quot;&lt; -180&quot;,
			IF(Overdue_Days_Formula__c &lt; -90, &quot;-(91-180)&quot;,
						IF(Overdue_Days_Formula__c &lt; -60, &quot;-(61-90)&quot;,
									IF(Overdue_Days_Formula__c &lt; -30, &quot;-(31-60)&quot;,
												IF(Overdue_Days_Formula__c &lt;= 0, &quot;-(0-30)&quot;,
             IF(Overdue_Days_Formula__c &lt;= 30, &quot;1-30&quot;,
                IF(Overdue_Days_Formula__c &lt;= 60, &quot;31-60&quot;,
                  IF(Overdue_Days_Formula__c &lt;= 90, &quot;61-90&quot;,
                    IF(Overdue_Days_Formula__c &lt;= 180, &quot;91-180&quot;,&quot;Over 180&quot;
)
)
)
)
)
									)
						)
			)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Period</label>
    <type>Text</type>
</CustomField>