force-app/main/default/objects/Account_Receivable__c/fields/Related_Order_Delivery_Plant__c.field-meta.xml
<CustomField>
    <fullName>Related_Order_Delivery_Plant__c</fullName>
    <formula>TEXT(Invoice__r.Order__r.Deliver_Plant__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Order Delivery Plant</label>
    <type>Text</type>
</CustomField>