force-app/main/default/objects/Account_Receivable__c/fields/X180_days_Overdue_Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>X180_days_Overdue_Local_Currency__c</fullName>
    <formula>IF(Overdue_Days_Formula__c &gt; 180, Amount_in_Local_Crcy__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>&gt; 180 days Overdue (Local Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>