force-app/main/default/objects/Account_Receivable__c/fields/X61_90_days_Overdue_Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>X61_90_days_Overdue_Local_Currency__c</fullName>
    <formula>IF(Overdue_Days_Formula__c &gt;= 61 &amp;&amp; Overdue_Days_Formula__c &lt;= 90, Amount_in_Local_Crcy__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>61-90 days Overdue (Local Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>