force-app/main/default/objects/Account_Receivable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Company_Code__c</columns>
    <columns>Profit_Center__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Document_Number__c</columns>
    <columns>Amount_in_Trans_Crcy__c</columns>
    <columns>Document_Currency__c</columns>
    <columns>Due_On__c</columns>
    <columns>Overdue_Days_Formula__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>