force-app/main/default/objects/Account_Receivable__c/listViews/Ar_Agroterrum_C.listView-meta.xml
<ListView>
    <fullName>Ar_Agroterrum_C</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Company_Code__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Document_Number__c</columns>
    <columns>Amount_in_Trans_Crcy__c</columns>
    <columns>Document_Currency__c</columns>
    <columns>Due_On__c</columns>
    <columns>Overdue_Days_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company_Code__c</field>
        <operation>equals</operation>
        <value>5130</value>
    </filters>
    <label>AR Agroterrum C</label>
    <sharedTo>
        <group>X5030</group>
        <role>Argentina_Agroterrum_General_Manager</role>
        <role>Argentina_Area_Head</role>
        <role>Argentina_Rainbow_Agro_General_Manager</role>
        <role>HQ_President</role>
    </sharedTo>
</ListView>