force-app/main/default/objects/Account_Receivable__c/listViews/Mx_Agroterrum_B.listView-meta.xml
<ListView>
    <fullName>Mx_Agroterrum_B</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Company_Code__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Document_Number__c</columns>
    <columns>Amount_in_Trans_Crcy__c</columns>
    <columns>Document_Currency__c</columns>
    <columns>Due_On__c</columns>
    <columns>Overdue_Days_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company_Code__c</field>
        <operation>equals</operation>
        <value>3020</value>
    </filters>
    <label>MX Agroterrum C</label>
    <sharedTo>
        <group>X3020</group>
        <role>HQ_President</role>
        <role>Mexico_Area_Head</role>
        <role>Mexico_Country_Manager</role>
        <role>Mexico_Rainbow_Agro_Logistics</role>
        <role>Mexico_Rainbow_Agro_Model_B_Sales_Manager</role>
    </sharedTo>
</ListView>